# Clicker

./: .gitignore  README.md  build.gradle  settings.gradle
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: engineering-issue-.md
app/: build.gradle
app/src/androidTest/java/com/example/clicker/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  blur_effect.cpp  camera_engine.h  camera_manager.cpp  camera_manager.h  camera_stream.cpp  cube_code.cpp  gl_code.cpp  my_class.cpp  my_class.h  ping_pong.cpp  rtmp_client.cpp  rtmp_client.h  square_code.cpp  understand_triangle.cpp  video_encoder.cpp
app/src/main/cpp/dino_run/: dino_run.cpp  dino_run.h  dino_run_actions.cpp  dino_run_actions.h  dino_run_setup.cpp  dino_run_setup.h
app/src/main/cpp/parsing/: amf_encoding.cpp  parse_url.cpp
app/src/main/cpp/ping_pong/: ping_pong.cpp  ping_pong_movement.cpp  ping_pong_movement.h
app/src/main/cpp/triangle_strip/: triangle_strip.cpp
app/src/main/java/com/example/clicker/: ChatUtils.kt  MainActivity.kt  composeMetricsInitScript.gradle
app/src/main/java/com/example/clicker/authentication/: TwitchAuthentication.kt
app/src/main/java/com/example/clicker/broadcastReceivers/: ShutDownBroadcastReceiver.kt
app/src/main/java/com/example/clicker/broadcastRecievers/: NetworkReceiver.kt
app/src/main/java/com/example/clicker/cameraNDK/: CameraNDKNativeActivity.kt
app/src/main/java/com/example/clicker/cpp/: CMakeLists.txt
app/src/main/java/com/example/clicker/data/: TokenDataStore.kt  TokenValidationWorker.kt
app/src/main/java/com/example/clicker/data/domains/: PinnedItemInter.kt
app/src/main/java/com/example/clicker/data/repos/: PinnedItemRepo.kt
app/src/main/java/com/example/clicker/data/room/: DataAccessObjects.kt  DataEntities.kt  PinnedItemsDatabase.kt
app/src/main/java/com/example/clicker/data/workManager/: OAuthTokeValidationWorker.kt
app/src/main/java/com/example/clicker/di/: HiltApplication.kt
app/src/main/java/com/example/clicker/di/modules/: SingletonModule.kt  ViewModelModule.kt
app/src/main/java/com/example/clicker/domain/: ChatSettingsDataStore.kt  GetFollowedLiveStreamsUseCase.kt  TwitchDataStore.kt  TwitchTokenValidationWorker.kt
app/src/main/java/com/example/clicker/farmingGame/: MyGLRenderer.kt  MyGLSurfaceView.kt
app/src/main/java/com/example/clicker/keyboard/: CustomInputMethodService.kt  ModerzImeService.kt
app/src/main/java/com/example/clicker/nativeLibraryClasses/: CameraStreamNDK.kt  NativeLoading.kt
app/src/main/java/com/example/clicker/navigation/: Navigation.kt
app/src/main/java/com/example/clicker/network/: GitHubClient.kt  RetrofitInstance.kt  TwitchClient.kt  TwitchRetrofitInstance.kt
app/src/main/java/com/example/clicker/network/clients/: BetterTTVEmoteClient.kt  TwitchAuthenticationClient.kt  TwitchClient.kt  TwitchEmoteClient.kt  TwitchHomeClient.kt  TwitchModClient.kt  TwitchSearchClient.kt  TwitchStreamInfoClient.kt  TwitchVODClient.kt
app/src/main/java/com/example/clicker/network/domain/: BetterTTVEmotes.kt  GitHubRepo.kt  NetworkMonitorRepo.kt  StreamInfoRepo.kt  TwitchAuthentication.kt  TwitchEmoteRepo.kt  TwitchEventSubscriptionWebSocket.kt  TwitchEventSubscriptions.kt  TwitchModRepo.kt  TwitchRepo.kt  TwitchSearch.kt  TwitchSocket.kt  TwitchStream.kt  TwitchVODRepo.kt
app/src/main/java/com/example/clicker/network/interceptors/: LiveNetworkMonitor.kt  LoggingInterceptor.kt  NetworkMonitor.kt  NetworkMonitorInterceptor.kt  NoNetworkException.kt  RetryInterceptor.kt
app/src/main/java/com/example/clicker/network/models/: AccessToken.kt  AuthenticatedUser.kt  ChatSettings.kt  FollowedLiveStreams.kt  GitHubProfile.kt  StreamData.kt  UpdatedChatSettings.kt  ValidatedUser.kt
app/src/main/java/com/example/clicker/network/repository/: BetterTTVEmotesImpl.kt  DebugRetrofitResponse.kt  GItHubRepo.kt  GitHubRepoImpl.kt  NetworkMonitorImpl.kt  StreamInfoRepoImpl.kt  TwitchEmotImpl.kt  (+7 more)
app/src/main/java/com/example/clicker/presentation/: AuthenticationEventBus.kt  HomeView.kt  HomeViewModel.kt
app/src/main/java/com/example/clicker/rtmp/: BitrateChecker.kt  ConnectChecker.kt  GenericStream.kt
app/src/main/java/com/example/clicker/services/: BackgroundStreamService.kt  NetworkMonitorService.kt  NetworkMonitorViewModel.kt  ScreenRecordingService.kt
app/src/main/java/com/example/clicker/util/: AndroidVersion.kt  ChatUtils.kt  CustomRetrofitCallAdapter.kt  Draggables.kt  LogWrap.kt  Response.kt  SortedEmoteMap.kt  SortedEmoteTree.kt  TwitchUserDataObjectMother.kt  Util.kt
app/src/main/java/com/example/clicker/workManager/: OAuthTokeValidationWorker.kt
app/src/main/res/drawable/: baseline_announcement_24.xml  baseline_rocket_launch_24.xml  clear_chat_alt_24.xml  ic_launcher_foreground.xml  ic_send.xml  mod_view_24.xml  moderator_secondary_color.xml  moderator_white.xml  shared_24.xml
app/src/main/res/layout/: activity_main.xml  camera_ndk_native_activity.xml  fragment_home.xml  fragment_logout.xml  fragment_mini_game.xml  fragment_mod_channels.xml  fragment_new_user.xml  fragment_search.xml  fragment_self_streaming.xml  fragment_stream.xml  new_testin_stream_layout.xml
app/src/main/res/layout-land/: fragment_stream.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  splashScreen.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml  method.xml
app/src/test/java/com/example/clicker/: ExampleUnitTest.kt  ParsingEngineTest.kt
app/src/test/java/com/example/clicker/network/: TwitchRepoImplTest.kt  TwitchStreamTest.kt
app/src/test/java/com/example/clicker/presentation/: HomeViewModelTest.kt  StreamViewModelTest.kt
app/src/test/java/com/example/clicker/utility/: ChatUtilTest.kt  NetworkMonitorInterceptorTest.kt  TwitchUserDataMotherObject.kt  TwitchUserDataObjectMother.kt  UtilityTests.kt
gradle/wrapper/: gradle-wrapper.properties
macrobenchmark/: build.gradle
macrobenchmark/src/main/: AndroidManifest.xml
macrobenchmark/src/main/java/com/buildinginpublic/macrobenchmark/: ExampleStartupBenchmark.kt
(+219 files in other folders)
